Fixed a minor Graphical Bug
Borders were misaligned on bottom half

--- a/src/app/resources/css/base.css
+++ b/src/app/resources/css/base.css
@@ -252,7 +252,7 @@ p {
 }
 
 .trackBox {
-  height: 83px;
+  height: 82px;
   margin-top: 0px;
   padding-bottom: 5px !important;
   margin-bottom: -10px !important;
